--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <script src="https://unpkg.com/video.js/dist/video.js"></script>
   <script src="https://unpkg.com/videojs-contrib-hls/dist/videojs-contrib-hls.js"></script>
   
-  <link rel="stylesheet" href="/live tv/css/style.css">
+  <link rel="stylesheet" href="css/style.css">
 
 </head>
 
