--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="nav_div">
     
    <header>
-     <img src="/live tv/img/nav_logo.jpeg" alt="logo" class="nav_logo">
+     <img src="img/nav_logo.jpeg" alt="logo" class="nav_logo">
      <nav>
        <ul class="nav_link">
          <li class="iteam"><a href="" class="iteam">Home</a></li>
